--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: Innarticles
   instagram: innarticles
-  linkedin: https://www.linkedin.com/in/innocentudeogu
+  linkedin: innocentudeogu
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: innarticle
