--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Innocent
 
 # Short bio or description (displayed in the header)
-description: Technolgy Developer Web & Mobile via Data
+description: Technology Developer; Web | Mobile | Data Science
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/7821781?v=3&s=460
