--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Innocent
+name: Innocent Udeogu
 
 # Short bio or description (displayed in the header)
 description: Technology Developer; Web | Mobile | Data Science
