--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Innocent Udeogu
 
 # Short bio or description (displayed in the header)
-description: Technology Developer; Web | Mobile | Data Science
+description: Co-founder & Software Engineering Lead, Ubenwa Health
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/7821781?v=3&s=460
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://innarticles.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
